--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -40,11 +40,15 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://resynetworkinc.applytojob.com/apply/TW1hoAaeYN/Site-Reliability-Engineer'>Site Reliability Engineer - Resy Network Inc - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer--936673/?gh_src=82a8057f1'>Site Reliability Engineer | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer---canada-1930466/?gh_src=82a8057f1'>Site Reliability Engineer - Canada | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer---canada-1930466/?gh_src=82a8057f1'>Site Reliability Engineer - Canada | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -68,7 +72,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/devops--site-reliability-engineer-okta-access-gateway-senior--staff-1690396/?gh_src=82a8057f1'>DevOps/ Site Reliability Engineer, Okta Access Gateway (Senior/ Staff) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/devops--site-reliability-engineer-okta-access-gateway-senior--staff-1690396/?gh_src=82a8057f1'>DevOps/ Site Reliability Engineer, Okta Access Gateway (Senior/ Staff) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -118,7 +122,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">London, United Kingdom  San Francisco Sydney</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=szZSJfwT&__jvsc=Twitter&bid=nUy2mMw7'>Smarsh Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=szZSJfwT&__jvsc=Twitter&bid=nUy2mMw7'>Smarsh Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -126,7 +130,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/tJXYF2C23S/Site-Reliability-Engineer'>Site Reliability Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/tJXYF2C23S/Site-Reliability-Engineer'>Site Reliability Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -138,7 +142,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/blizzard/job/opinbfwZ'>Blizzard Entertainment Careers - Manager, Site Reliability Engineering</a></h5> 
+<h5><a href='https://jobs.jobvite.com/blizzard/job/opinbfwZ'>Blizzard Entertainment Careers - Manager, Site Reliability Engineering</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -196,7 +200,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AiryRooms/743999698105617-infrastructure-engineer-cloud-site-reliability-devsecops-'>Airy Rooms Infrastructure Engineer (Cloud/Site Reliability/DevSecOps) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AiryRooms/743999698105617-infrastructure-engineer-cloud-site-reliability-devsecops-'>Airy Rooms Infrastructure Engineer (Cloud/Site Reliability/DevSecOps) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -212,7 +216,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cameo.breezy.hr/p/245b9b175be4-site-reliability-engineer-sre'>Site Reliability Engineer (SRE) at Cameo</a></h5> 
+<h5><a href='https://cameo.breezy.hr/p/245b9b175be4-site-reliability-engineer-sre'>Site Reliability Engineer (SRE) at Cameo</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -258,7 +262,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/oB5lbfwW'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/splunk/job/oB5lbfwW'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -307,7 +311,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ipsy/job/os3nbfwN'>Ipsy Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ipsy/job/os3nbfwN'>Ipsy Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">San Mateo, California  San Mateo</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -343,7 +347,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4490481002'>Job Application for Site Reliability Engineer at Digital On Us</a></h5> 
+<h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4490481002'>Job Application for Site Reliability Engineer at Digital On Us</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -382,7 +386,7 @@ believes?...</p>
 <p>Oct 8, 2019 ... We are looking for an experienced Site Reliability Engineer to join our Platforms 
 team based in Wellington. At SilverStripe, our mission is to help everyone have?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oy97afwI&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nflHeMwM'>NICE inContact Careers - Senior Specialist Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oy97afwI&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nflHeMwM'>NICE inContact Careers - Senior Specialist Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
@@ -398,7 +402,7 @@ team based in Wellington. At SilverStripe, our mission is to help everyone have?
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/carta/72121fbc-80d7-4273-9511-4095d127fd92'>Carta - Senior+ Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/carta/72121fbc-80d7-4273-9511-4095d127fd92'>Carta - Senior+ Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -428,7 +432,7 @@ Linux experience, network knowledge, scripting abilities, information security a
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/backcountry/job/oJKvafwS'>Backcountry Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/backcountry/job/oJKvafwS'>Backcountry Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -449,10 +453,6 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <h5><a href='https://golang.cafe/job/senior-software-engineer-or-site-reliability-engineer-micro-1571243556'>Senior Software Engineer or Site Reliability Engineer at Micro</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-17</p>
-<hr/>
-<h5><a href='http://imanagecom.applytojob.com/apply/gmLDtRpHvf/Senior-Site-Reliability-Engineer'>Senior Site Reliability Engineer - iManage - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-17</p>
 <hr/>
 
 
