--- a/ui.html
+++ b/ui.html
@@ -66,7 +66,7 @@
 <p><span class="badge badge-light">San Diego, California  San Diego</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698522791-caissier-cuisinier-nuit-dimanche-au-jeudi-prime-de-nuit'>McDonald's Restaurants Caissier/Cuisinier - Nuit (Dimanche au jeudi) PRIME DE NUIT | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698522791-caissier-cuisinier-nuit-dimanche-au-jeudi-prime-de-nuit'>McDonald's Restaurants Caissier/Cuisinier - Nuit (Dimanche au jeudi) PRIME DE NUIT | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -74,7 +74,7 @@
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.greatinsurancejobs.com/job/6409337/ui-developer/?TrackID=97736'>UI Developer job with Travelers Insurance | 6409337</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.greatinsurancejobs.com/job/6409337/ui-developer/?TrackID=97736'>UI Developer job with Travelers Insurance | 6409337</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light">Menlo Park, CA  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/soroco/jobs/1939115'>Job Application for UI UX Designer at Soroco</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soroco/jobs/1939115'>Job Application for UI UX Designer at Soroco</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -146,7 +146,7 @@
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5634/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5634/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -204,11 +204,11 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/shopstyle/jobs/4497422002'>Job Application for Head of Product Design (UX/UI), ShopStyle Collective at ShopStyle</a></h5> 
+<h5><a href='https://boards.greenhouse.io/shopstyle/jobs/4497422002'>Job Application for Head of Product Design (UX/UI), ShopStyle Collective at ShopStyle</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opsramp.recruitee.com/o/ui-developer'>
+<h5><a href='https://opsramp.recruitee.com/o/ui-developer'>
       UI Developer - OpsRamp, Inc.
     </a></h5> 
 <p><span class="badge badge-light">Hyderabad, India</span></p>
@@ -234,7 +234,7 @@
 <p><span class="badge badge-light">Karnataka, India  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hellomavis.com/job/ux-ui-designer-4/'>UX/UI Designer - Mavis</a></h5> 
+<h5><a href='https://hellomavis.com/job/ux-ui-designer-4/'>UX/UI Designer - Mavis</a></h5> 
 <p><span class="badge badge-light">London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -278,7 +278,7 @@
 <p><span class="badge badge-light">Omaha, Nebraska</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/blacklane/jobs/4411096002'>Job Application for Senior UI/Visual Designer, Product (f/m/d) at BLACKLANE</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blacklane/jobs/4411096002'>Job Application for Senior UI/Visual Designer, Product (f/m/d) at BLACKLANE</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -286,7 +286,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://tui.join.com/jobs/467038-teamleiter-m-w-d-distribution-b2b-und-events'>Job @ TUI Austria Holding (Wien): Teamleiter (m/w/... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tui.join.com/jobs/467038-teamleiter-m-w-d-distribution-b2b-und-events'>Job @ TUI Austria Holding (Wien): Teamleiter (m/w/... | JOIN</a></h5> 
 <p><span class="badge badge-light">Wien, ?sterreich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -298,19 +298,19 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Front-End-DeveloperAngularReactHTML5CSS3UXUI'>Front End Developer(Angular/React/HTML5/CSS3,UX/UI) - MAS Global Consulting - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Front-End-DeveloperAngularReactHTML5CSS3UXUI'>Front End Developer(Angular/React/HTML5/CSS3,UX/UI) - MAS Global Consulting - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MagnumSteelWorksInc/743999695972814-heavy-equipment-mechanics-2nd-shift-4-10-hr-shifts-with-a-4-day-weekend-every-other-weekend-'>Magnum Steel Works, Inc. HEAVY EQUIPMENT MECHANICS - 2nd Shift (4-10-hr shifts with a 4-day weekend every other weekend) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MagnumSteelWorksInc/743999695972814-heavy-equipment-mechanics-2nd-shift-4-10-hr-shifts-with-a-4-day-weekend-every-other-weekend-'>Magnum Steel Works, Inc. HEAVY EQUIPMENT MECHANICS - 2nd Shift (4-10-hr shifts with a 4-day weekend every other weekend) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://euraxess.ec.europa.eu/jobs/458313'>Postdoctoral in the field of natural sciences, field of biology, to work on HRZZ NZZ establishment project UIP-2017-05-5635 "Microbiome of loggerhead turtle (Caretta caretta): insight into episodic and endozoic communities (TurtleBIOME)" | EURAXESS</a></h5> 
+<h5><a href='https://euraxess.ec.europa.eu/jobs/458313'>Postdoctoral in the field of natural sciences, field of biology, to work on HRZZ NZZ establishment project UIP-2017-05-5635 "Microbiome of loggerhead turtle (Caretta caretta): insight into episodic and endozoic communities (TurtleBIOME)" | EURAXESS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coachhub.join.com/jobs/457564-ui-ux-designer-mobile-and-web-apps-m-f-d'>Job @ Coachhub (Berlin): UI/UX Designer ? Mobile &... | JOIN</a></h5> 
+<h5><a href='https://coachhub.join.com/jobs/457564-ui-ux-designer-mobile-and-web-apps-m-f-d'>Job @ Coachhub (Berlin): UI/UX Designer ? Mobile &... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -330,7 +330,7 @@
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.theguardian.com/job/6990165/senior-hr-coordinator-advertising/?TrackID=15'>Senior HR Coordinator - Advertising job with BIS RECRUIT | Guardian Jobs</a></h5> 
+<h5><a href='https://jobs.theguardian.com/job/6990165/senior-hr-coordinator-advertising/?TrackID=15'>Senior HR Coordinator - Advertising job with BIS RECRUIT | Guardian Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -406,7 +406,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://recruit.apo.ucla.edu/JPF05081'>Postdoctoral Scholar in Uterine Cancers - UCLA G.O. Discovery Laboratory (JPF05081) - UCLA Academic RECRUIT</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.apo.ucla.edu/JPF05081'>Postdoctoral Scholar in Uterine Cancers - UCLA G.O. Discovery Laboratory (JPF05081) - UCLA Academic RECRUIT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -420,7 +420,7 @@
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.elcamino.edu/student/studentservices/health/substance-abuse-dui-awareness.aspx'>Substance Abuse &amp; DUI Awareness Fair</a></h5> 
+<h5><a href='https://www.elcamino.edu/student/studentservices/health/substance-abuse-dui-awareness.aspx'>Substance Abuse &amp; DUI Awareness Fair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
